# InverseKinematicApp

./: CMakeLists.txt  README.md
datas/: results.txt
dockerfiles/: dockerfile
include/: URInverseKinematics.h  utility.h
scripts/: visualize.py  visualize_2d.py
src/: URInverseKinematics.cpp  main.cpp  utility.cpp
